Update high firing rate fig1D

--- a/notebooks/fig3.ipynb
+++ b/notebooks/fig3.ipynb
@@ -35,8 +35,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.49 s, sys: 133 ms, total: 3.62 s\n",
-      "Wall time: 1.04 s\n"
+      "CPU times: user 3.28 s, sys: 142 ms, total: 3.42 s\n",
+      "Wall time: 1.14 s\n"
      ]
     }
    ],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,8 +343,8 @@
       "prior mean cell 2: (np.float64(-4.49710592253228e-18), np.float64(2.24855296126614e-18))\n",
       "prior mean cell 3: (np.float64(-2.1361253132028328e-17), np.float64(1.3491317767596838e-17))\n",
       "prior mean cell 4: (np.float64(-4.2708990760651386e-17), np.float64(5.3948198855559645e-17))\n",
-      "CPU times: user 3.25 s, sys: 319 ms, total: 3.57 s\n",
-      "Wall time: 3.57 s\n"
+      "CPU times: user 3.44 s, sys: 350 ms, total: 3.79 s\n",
+      "Wall time: 3.79 s\n"
      ]
     }
    ],
@@ -432,8 +432,8 @@
       "Epoch 160/200, Train Loss: 0.4817, Val Loss: 0.7975\n",
       "Epoch 180/200, Train Loss: 0.4326, Val Loss: 0.7369\n",
       "Epoch 200/200, Train Loss: 0.3920, Val Loss: 0.6859\n",
-      "CPU times: user 12.2 s, sys: 193 ms, total: 12.4 s\n",
-      "Wall time: 914 ms\n"
+      "CPU times: user 16.5 s, sys: 166 ms, total: 16.6 s\n",
+      "Wall time: 1.16 s\n"
      ]
     }
    ],
@@ -475,8 +475,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 543 ms, sys: 23.1 ms, total: 566 ms\n",
-      "Wall time: 33.2 ms\n"
+      "CPU times: user 2.6 s, sys: 726 µs, total: 2.6 s\n",
+      "Wall time: 121 ms\n"
      ]
     }
    ],
@@ -518,10 +518,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Computing ilocal: 100%|██████████| 100/100 [17:21<00:00, 10.41s/it]\n",
-      "Computing ilocal: 100%|██████████| 100/100 [17:25<00:00, 10.45s/it]\n",
-      "Computing ilocal: 100%|██████████| 100/100 [17:17<00:00, 10.38s/it]\n",
-      "Computing ilocal: 100%|██████████| 100/100 [17:15<00:00, 10.36s/it]\n"
+      "Computing ilocal:   0%|          | 0/100 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Computing ilocal: 100%|██████████| 100/100 [18:34<00:00, 11.15s/it]\n",
+      "Computing ilocal: 100%|██████████| 100/100 [18:20<00:00, 11.00s/it]\n",
+      "Computing ilocal: 100%|██████████| 100/100 [18:08<00:00, 10.89s/it]\n",
+      "Computing ilocal: 100%|██████████| 100/100 [18:00<00:00, 10.80s/it]\n"
      ]
     }
    ],
@@ -548,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -626,8 +633,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 25.3 ms, sys: 1.05 ms, total: 26.4 ms\n",
-      "Wall time: 26 ms\n"
+      "CPU times: user 28.4 ms, sys: 11.9 ms, total: 40.3 ms\n",
+      "Wall time: 39.9 ms\n"
      ]
     },
     {
