--- a/notebooks/fig1.ipynb
+++ b/notebooks/fig1.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "0cf57536",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
     "        dirs (np.array): directions in radians\n",
     "\n",
     "    Returns:\n",
-    "        np.array: directions wrapped circularly\n",
+    "        np.array: directions wrapped circularly between -pi and pi\n",
     "    \"\"\"\n",
     "    return ((dirs + pi) % (2 * pi) - pi).flatten()\n",
     "\n",
@@ -201,7 +201,7 @@
     "\n",
     "def compute_I_brute_force(x: np.array, xplot: np.array, tc_pms: dict, dx=0.005, nsamp:int=10000):\n",
     "    \"\"\"Compute mutual information (I(R;X)) in a \n",
-    "    brute force manner\n",
+    "    brute force manner (monte carlo sampling)\n",
     "\n",
     "    Args:\n",
     "        x\n",
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "3335d0ea",
    "metadata": {},
    "outputs": [
@@ -445,36 +445,36 @@
    "source": [
     "%%time\n",
     "\n",
-    "# # 20 neurons with high firing rates\n",
-    "# n_neurons = 20\n",
-    "# pref_dirs = linspace(x_min, x_max, n_neurons + 1)[:-1]\n",
-    "# pref_dirs = pref_dirs-mean(pref_dirs)\n",
-    "# tc_pms = {\"width\": 0.29, \"baseline\": 0.01, \"amplitude\": 19, \"pref_dirs\": pref_dirs}\n",
-    "# ssi_n20_high, mse_n20_high = compute_I_brute_force(x, xplot, tc_pms, dx=dx, nsamp=NSAMP)\n",
+    "# 20 neurons with high firing rates\n",
+    "n_neurons = 20\n",
+    "pref_dirs = linspace(x_min, x_max, n_neurons + 1)[:-1]\n",
+    "pref_dirs = pref_dirs-mean(pref_dirs)\n",
+    "tc_pms = {\"width\": 0.29, \"baseline\": 0.01, \"amplitude\": 19, \"pref_dirs\": pref_dirs}\n",
+    "ssi_n20_high, mse_n20_high = compute_I_brute_force(x, xplot, tc_pms, dx=dx, nsamp=NSAMP)\n",
     "\n",
-    "# # 4 neurons with high firing rates\n",
-    "# n_neurons = 4\n",
-    "# pref_dirs = linspace(x_min, x_max, n_neurons+1)[:-1] \n",
-    "# pref_dirs = pref_dirs - mean(pref_dirs)\n",
-    "# tc_pms = {\"width\": 0.29, \"baseline\": 0.01, \"amplitude\": 19, \"pref_dirs\": pref_dirs}\n",
-    "# ssi_n4_high, mse_n4_high = compute_I_brute_force(x, xplot, tc_pms, dx=dx, nsamp=NSAMP)\n",
+    "# 4 neurons with high firing rates\n",
+    "n_neurons = 4\n",
+    "pref_dirs = linspace(x_min, x_max, n_neurons+1)[:-1] \n",
+    "pref_dirs = pref_dirs - mean(pref_dirs)\n",
+    "tc_pms = {\"width\": 0.29, \"baseline\": 0.01, \"amplitude\": 19, \"pref_dirs\": pref_dirs}\n",
+    "ssi_n4_high, mse_n4_high = compute_I_brute_force(x, xplot, tc_pms, dx=dx, nsamp=NSAMP)\n",
     "\n",
-    "# # 4 neurons with high firing rates\n",
-    "# n_neurons = 4\n",
-    "# pref_dirs = linspace(x_min, x_max, n_neurons + 1)[:-1]\n",
-    "# pref_dirs = pref_dirs - mean(pref_dirs)\n",
-    "# tc_pms = {\"width\": 0.29, \"baseline\": 0.01, \"amplitude\": 3, \"pref_dirs\": pref_dirs}\n",
-    "# ssi_n4_low, mse_n4_low = compute_I_brute_force(x, xplot, tc_pms, dx=dx, nsamp=NSAMP)\n",
+    "# 4 neurons with high firing rates\n",
+    "n_neurons = 4\n",
+    "pref_dirs = linspace(x_min, x_max, n_neurons + 1)[:-1]\n",
+    "pref_dirs = pref_dirs - mean(pref_dirs)\n",
+    "tc_pms = {\"width\": 0.29, \"baseline\": 0.01, \"amplitude\": 3, \"pref_dirs\": pref_dirs}\n",
+    "ssi_n4_low, mse_n4_low = compute_I_brute_force(x, xplot, tc_pms, dx=dx, nsamp=NSAMP)\n",
     "\n",
     "# 1 neuron with high firing rates\n",
     "pref_dirs = np.array([pi])\n",
     "tc_pms = {\"width\": 0.29, \"baseline\": 0.01, \"amplitude\": 100, \"pref_dirs\": pref_dirs} # (default amplitude=19)\n",
     "ssi_n1_high, mse_n1_high = compute_I_brute_force(x, xplot, tc_pms, dx=dx, nsamp=NSAMP)\n",
     "\n",
-    "# # 1 neuron with low firing rates\n",
-    "# pref_dirs = np.array([pi])\n",
-    "# tc_pms = {\"width\": 0.29, \"baseline\": 0.01, \"amplitude\": 19, \"pref_dirs\": pref_dirs} # (default amplitude=3)\n",
-    "# ssi_n1_low, mse_n1_low = compute_I_brute_force(x, xplot, tc_pms, dx=dx, nsamp=NSAMP)"
+    "# 1 neuron with low firing rates\n",
+    "pref_dirs = np.array([pi])\n",
+    "tc_pms = {\"width\": 0.29, \"baseline\": 0.01, \"amplitude\": 19, \"pref_dirs\": pref_dirs} # (default amplitude=3)\n",
+    "ssi_n1_low, mse_n1_low = compute_I_brute_force(x, xplot, tc_pms, dx=dx, nsamp=NSAMP)"
    ]
   },
   {
@@ -484,12 +484,12 @@
    "source": [
     "## Compute $I_{local}$\n",
     "\n",
-    "- Execution time: 24 min"
+    "- Execution time: 1h"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "0241eae4",
    "metadata": {},
    "outputs": [
@@ -519,41 +519,41 @@
    "source": [
     "%%time\n",
     "\n",
-    "# # 20 neurons with high firing rate\n",
-    "# n_neurons = 20\n",
-    "# pref_dirs = linspace(x_min, x_max, n_neurons+1)[:-1]\n",
-    "# pref_dirs = pref_dirs - mean(pref_dirs)\n",
-    "# tc_pms = {\"width\": 0.29, \"baseline\": 0.01, \"amplitude\": 19, \"pref_dirs\": pref_dirs}\n",
+    "# 20 neurons with high firing rate\n",
+    "n_neurons = 20\n",
+    "pref_dirs = linspace(x_min, x_max, n_neurons+1)[:-1]\n",
+    "pref_dirs = pref_dirs - mean(pref_dirs)\n",
+    "tc_pms = {\"width\": 0.29, \"baseline\": 0.01, \"amplitude\": 19, \"pref_dirs\": pref_dirs}\n",
     "\n",
-    "# Ilocal_n20_high, _, _, _, fisher_info_n20_high, x_rates_n20_high = compute_circular_ilocal(x, xplot, tc_pms, dx=dx, nsamp=NSAMP)\n",
+    "Ilocal_n20_high, _, _, _, fisher_info_n20_high, x_rates_n20_high = compute_circular_ilocal(x, xplot, tc_pms, dx=dx, nsamp=NSAMP)\n",
     "\n",
-    "# # 4 neurons with high firing rate\n",
-    "# n_neurons = 4\n",
-    "# pref_dirs_n4_high = linspace(x_min, x_max, n_neurons+1)[:-1]\n",
-    "# pref_dirs_n4_high = pref_dirs_n4_high - mean(pref_dirs_n4_high)\n",
-    "# tc_pms = {\"width\": 0.29, \"baseline\": 0.01, \"amplitude\": 19, \"pref_dirs\": pref_dirs_n4_high}\n",
+    "# 4 neurons with high firing rate\n",
+    "n_neurons = 4\n",
+    "pref_dirs_n4_high = linspace(x_min, x_max, n_neurons+1)[:-1]\n",
+    "pref_dirs_n4_high = pref_dirs_n4_high - mean(pref_dirs_n4_high)\n",
+    "tc_pms = {\"width\": 0.29, \"baseline\": 0.01, \"amplitude\": 19, \"pref_dirs\": pref_dirs_n4_high}\n",
     "\n",
-    "# Ilocal_n4_high, _, _, _, fisher_info_n4_high, x_rates_n4_high = compute_circular_ilocal(x, xplot, tc_pms, dx=dx, nsamp=NSAMP)\n",
+    "Ilocal_n4_high, _, _, _, fisher_info_n4_high, x_rates_n4_high = compute_circular_ilocal(x, xplot, tc_pms, dx=dx, nsamp=NSAMP)\n",
     "\n",
-    "# # 4 neurons with low firing rate\n",
-    "# n_neurons = 4\n",
-    "# pref_dirs = linspace(x_min, x_max, n_neurons+1)[:-1]\n",
-    "# pref_dirs = pref_dirs - mean(pref_dirs)\n",
-    "# tc_pms = {\"width\": 0.29, \"baseline\": 0.01, \"amplitude\": 3, \"pref_dirs\": pref_dirs}\n",
+    "# 4 neurons with low firing rate\n",
+    "n_neurons = 4\n",
+    "pref_dirs = linspace(x_min, x_max, n_neurons+1)[:-1]\n",
+    "pref_dirs = pref_dirs - mean(pref_dirs)\n",
+    "tc_pms = {\"width\": 0.29, \"baseline\": 0.01, \"amplitude\": 3, \"pref_dirs\": pref_dirs}\n",
     "\n",
-    "# Ilocal_n4_low, _, _, _, fisher_info_n4_low, x_rates_n4_low = compute_circular_ilocal(x, xplot, tc_pms, dx=dx, nsamp=NSAMP)\n",
+    "Ilocal_n4_low, _, _, _, fisher_info_n4_low, x_rates_n4_low = compute_circular_ilocal(x, xplot, tc_pms, dx=dx, nsamp=NSAMP)\n",
     "\n",
     "# 1 neuron with high firing rate\n",
     "pref_dirs = np.array([pi])\n",
-    "tc_pms = {\"width\": 0.29, \"baseline\": 0.01, \"amplitude\": 100, \"pref_dirs\": pref_dirs} # (default amplitude=19)\n",
+    "tc_pms = {\"width\": 0.29, \"baseline\": 0.01, \"amplitude\": 100, \"pref_dirs\": pref_dirs}\n",
     "\n",
     "Ilocal_n1_high, _, _, _, fisher_info_n1_high, x_rates_n1_high = compute_circular_ilocal(x, xplot, tc_pms, dx=dx, nsamp=NSAMP)\n",
     "\n",
-    "# # 1 neuron with low firing rate\n",
-    "# pref_dirs = np.array([pi])\n",
-    "# tc_pms = {\"width\": 0.29, \"baseline\": 0.01, \"amplitude\": 19, \"pref_dirs\": pref_dirs} # (default amplitude=3)\n",
+    "# 1 neuron with low firing rate\n",
+    "pref_dirs = np.array([pi])\n",
+    "tc_pms = {\"width\": 0.29, \"baseline\": 0.01, \"amplitude\": 19, \"pref_dirs\": pref_dirs}\n",
     "\n",
-    "# Ilocal_n1_low, _, _, _, fisher_info_n1_low, x_rates_n1_low = compute_circular_ilocal(x, xplot, tc_pms, dx=dx, nsamp=NSAMP)"
+    "Ilocal_n1_low, _, _, _, fisher_info_n1_low, x_rates_n1_low = compute_circular_ilocal(x, xplot, tc_pms, dx=dx, nsamp=NSAMP)"
    ]
   },
   {
