--- a/notebooks/fig1.ipynb
+++ b/notebooks/fig1.ipynb
@@ -300,7 +300,7 @@
     "\n",
     "    for i in tqdm(range(nsamp), \"Ilocal\"):\n",
     "\n",
-    "        # sample gamma from p(gamma)~1/gamma, between gamma_min and gamma_mas\n",
+    "        # sample gamma from p(gamma)~1/gamma, between gamma_min and gamma_max\n",
     "        gamma = exp( rand() * (log(gamma_max) - log(gamma_min)) + log(gamma_min))\n",
     "\n",
     "        # sample y~p(y|x), of shape (len(x), )\n",
