save fig1D dataset for Carlo

--- a/notebooks/fig1.ipynb
+++ b/notebooks/fig1.ipynb
@@ -909,7 +909,34 @@
    "id": "6843c031",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# setup figure\n",
+    "fig, axes = plt.subplots(3,4, figsize=(12,6.5))\n",
+    "\n",
+    "ax = axes[0,3]\n",
+    "ax.plot(x.flatten(), x_rates_n1_high.T, linewidth=linew)\n",
+    "ax.plot(x.flatten(), x_rates_n1_low.T, linewidth=linew)\n",
+    "\n",
+    "fig_data = {\n",
+    "            'x_min': x_min,\n",
+    "            'x_max': 2*pi,          \n",
+    "            'x_rates_n1_high': x_rates_n1_high,\n",
+    "            'x_rates_n1_low': x_rates_n1_low,\n",
+    "            'xplot': xplot.flatten(),\n",
+    "            'fisher_info_n1_high': fisher_info_n1_high,\n",
+    "            'fisher_info_n1_low': fisher_info_n1_low,\n",
+    "            'Ilocal_n1_high': Ilocal_n1_high,\n",
+    "            'Ilocal_n1_low': Ilocal_n1_low,\n",
+    "            'ssi_n1_high': ssi_n1_high,\n",
+    "            'ssi_n1_low': ssi_n1_low\n",
+    "            }\n",
+    "\n",
+    "# save data for figure 1D\n",
+    "np.savez('data/2_figure_dataset/fig1D.npz', **fig_data)\n",
+    "\n",
+    "#  load data for fig1D\n",
+    "loaded_data = dict(np.load('data/2_figure_dataset/fig1D.npz'))"
+   ]
   }
  ],
  "metadata": {
